[gd_scene load_steps=8 format=3 uid="uid://cc80ca33i1bit"]

[ext_resource type="Script" path="res://scripts/reactor.gd" id="1_lyky6"]
[ext_resource type="Texture2D" uid="uid://bjxg4ykpwku06" path="res://imgs/rooms/reactor/reactor_closed.png" id="2_syn40"]
[ext_resource type="Texture2D" uid="uid://svwcesr5po2k" path="res://imgs/sprites/arrow_mask.png" id="3_5gjyo"]
[ext_resource type="PackedScene" uid="uid://bpmf5vshyap71" path="res://scenes/tasks/task_fix_wires.tscn" id="3_gxbge"]
[ext_resource type="BitMap" path="res://imgs/sprites/arrow_ask_bitmap.tres" id="4_ekii0"]
[ext_resource type="Texture2D" uid="uid://cviltk10vq2sj" path="res://imgs/sprites/arrow.png" id="5_sa7je"]
[ext_resource type="Texture2D" uid="uid://dw6a7srjugliq" path="res://imgs/sprites/tasks/janitor/wirebox_reactor_mask.png" id="7_cylip"]

[node name="Reactor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lyky6")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_syn40")

[node name="Tasks" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Day1" type="Control" parent="Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Day2" type="Control" parent="Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Day3" type="Control" parent="Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Day4" type="Control" parent="Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Day5" type="Control" parent="Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Task_Fix_Wires" parent="Tasks/Day5" instance=ExtResource("3_gxbge")]
layout_mode = 1
target_matching = Array[int]([2, 3, 1])
task_description = "Fix the wires in the reactor room"

[node name="Day6" type="Control" parent="Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Task_Fix_Wires" parent="Tasks/Day6" instance=ExtResource("3_gxbge")]
layout_mode = 1
target_matching = Array[int]([1, 3, 2])
task_description = "Fix the wires in the reactor room"

[node name="Leave" type="TextureButton" parent="."]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 246.0
offset_top = 884.0
offset_right = 409.0
offset_bottom = 1068.0
texture_hover = ExtResource("3_5gjyo")
texture_click_mask = ExtResource("4_ekii0")
stretch_mode = 0

[node name="Arraw_tex" type="TextureRect" parent="Leave"]
show_behind_parent = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_sa7je")

[node name="wirebox" type="TextureButton" parent="."]
self_modulate = Color(0, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 88.0
offset_top = 696.0
offset_right = 160.0
offset_bottom = 816.0
texture_hover = ExtResource("7_cylip")
stretch_mode = 0

[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="wirebox" to="." method="_on_wirebox_pressed"]
